TBD-562: Support Parquet for Pig and Hive

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -88,6 +88,7 @@ STORAGE_FORMAT.ITEM.ORC=ORCFILE
 STORAGE_FORMAT.ITEM.AVRO=AVRO
 STORAGE_FORMAT.ITEM.INPUTFORMAT_AND_OUTPUTFORMAT=INPUTFORMAT and OUTPUTFORMAT
 STORAGE_FORMAT.ITEM.STORAGE=STORAGE
+STORAGE_FORMAT.ITEM.PARQUET=PARQUET
 
 CREATE_EXTERNAL.NAME=Create an external table
 
