--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -81,6 +81,12 @@ TARGET.NAME=Target type
 TARGET.ITEM.TABLE=TABLE
 TARGET.ITEM.DIRECTORY=DIRECTORY
 
+TARGET_TABLE_IS_A_PARQUET_TABLE.NAME=The target table uses the Parquet format
+PARQUET_COMPRESSION.NAME=Compression
+PARQUET_COMPRESSION.ITEM.UNCOMPRESSED=Uncompressed
+PARQUET_COMPRESSION.ITEM.GZIP=GZip
+PARQUET_COMPRESSION.ITEM.SNAPPY=Snappy
+
 FILEPATH.NAME=File Path
 
 FILE_ACTION.NAME=Target type
