--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -62,6 +62,7 @@ LOAD.ITEM.HBASESTORAGE=HBaseStorage
 LOAD.ITEM.SEQUENCEFILELOADER=SequenceFileLoader
 LOAD.ITEM.RCFILEPIGSTORAGE=RCFilePigStorage
 LOAD.ITEM.AVROSTORAGE=AvroStorage
+LOAD.ITEM.PARQUETLOADER=ParquetLoader
 LOAD.ITEM.CUSTOM=Custom
 
 CUSTOM_LOADER.NAME=
