--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -16,6 +16,7 @@ STORE.ITEM.HBASESTORAGE=HBaseStorage
 STORE.ITEM.SEQUENCEFILESTORAGE=SequenceFileStorage
 STORE.ITEM.RCFILEPIGSTORAGE=RCFilePigStorage
 STORE.ITEM.AVROSTORAGE=AvroStorage
+STORE.ITEM.PARQUETSTORER=ParquetStorer
 STORE.ITEM.CUSTOM=Custom
 
 CUSTOM_STORER.NAME=
@@ -30,6 +31,11 @@ DEFINE_REGISTER_JAR.NAME=Define the jars to register
 REGISTER_JAR.NAME=Register jar
 REGISTER_JAR.ITEM.JAR_NAME=Jar name
 REGISTER_JAR.ITEM.JAR_PATH=Jar path
+
+PARQUET_COMPRESSION.NAME=Compression
+PARQUET_COMPRESSION.ITEM.UNCOMPRESSED=Uncompressed
+PARQUET_COMPRESSION.ITEM.GZIP=GZip
+PARQUET_COMPRESSION.ITEM.SNAPPY=Snappy
 
 THRIFT_SERVER.NAME=HCat metastore
 
