bug TBD-910 :Oozie preferences seems no use now that TOS_BD has the metadata

--- a/main/plugins/org.talend.oozie.scheduler/plugin.xml
+++ b/main/plugins/org.talend.oozie.scheduler/plugin.xml
@@ -18,7 +18,7 @@
             category="org.talend.core.prefs"
             class="org.talend.oozie.scheduler.ui.prefs.OozieSchedulerPreferencePage"
             id="org.talend.designer.core.oozie.scheduler"
-            name="Oozie">
+            name="Oozie(Deprecated)">
       </page>
    </extension>
 
