TBD-562: fix different issues with parquet and hive

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -18,6 +18,7 @@ DBTABLE.NAME=Table Name
 QUERYSTORE.NAME=Query Type
 GUESS_SCHEMA.NAME=Guess Schema
 QUERY.NAME=Query
+USE_PARQUET.NAME=This query uses parquet objects
 
 ENCODING.NAME=Encoding
 TRIM_ALL_COLUMN.NAME=Trim all the String/Char columns
