--- a/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveOutput/tELTHiveOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveOutput/tELTHiveOutput_messages.properties
@@ -16,3 +16,9 @@ FIELD_PARTITION.ITEM.COLUMN_VALUE=Partition Value
 
 USE_DIFFERENT_TABLE.NAME=Use different table name
 DIFFERENT_TABLE_NAME.NAME=Table name
+
+TARGET_TABLE_IS_A_PARQUET_TABLE.NAME=The target table uses the Parquet format
+PARQUET_COMPRESSION.NAME=Compression
+PARQUET_COMPRESSION.ITEM.UNCOMPRESSED=Uncompressed
+PARQUET_COMPRESSION.ITEM.GZIP=GZip
+PARQUET_COMPRESSION.ITEM.SNAPPY=Snappy
