--- a/main/plugins/org.talend.repository.nosql/plugin.xml
+++ b/main/plugins/org.talend.repository.nosql/plugin.xml
@@ -207,7 +207,7 @@
       </classloader>
       <classloader
             index="NOSQL:NEO4J"
-            libraries="neo4j-kernel-2.1.2.jar;neo4j-primitive-collections-2.1.2.jar;neo4j-rest-graphdb-2.0.1.jar;neo4j-cypher-2.1.2.jar;lucene-core-3.6.2.jar;neo4j-cypher-commons-2.1.2.jar;neo4j-cypher-compiler-1.9-2.0.3.jar;neo4j-cypher-compiler-2.0-2.0.3.jar;neo4j-cypher-compiler-2.1-2.1.2.jar;neo4j-graph-algo-2.1.2.jar;neo4j-graph-matching-2.1.2.jar;neo4j-lucene-index-2.1.2.jar;concurrentlinkedhashmap-lru-1.3.1.jar;scala-library-2.10.4.jar;geronimo-jta_1.1_spec-1.1.1.jar;jsr311-api-1.1.2.r612.jar;jersey-client-1.4.jar;jersey-core-1.4.jar;jackson-mapper-asl-1.9.7.jar;jackson-jaxrs-1.9.7.jar;jackson-core-asl-1.9.7.jar">
+            libraries="neo4j-kernel-2.1.2.jar;neo4j-primitive-collections-2.1.2.jar;neo4j-rest-graphdb-2.0.1.jar;neo4j-cypher-2.1.2.jar;lucene-core-3.6.2.jar;neo4j-cypher-commons-2.1.2.jar;neo4j-cypher-compiler-1.9-2.0.3.jar;neo4j-cypher-compiler-2.0-2.0.3.jar;neo4j-cypher-compiler-2.1-2.1.2.jar;neo4j-graph-algo-2.1.2.jar;neo4j-graph-matching-2.1.2.jar;neo4j-lucene-index-2.1.2.jar;concurrentlinkedhashmap-lru-1.3.1.jar;scala-library-2.10.4.jar;geronimo-jta_1.1_spec-1.1.1.jar;jsr311-api-1.1.2.r612.jar;jersey-client-1.4.jar;jersey-core-1.4.jar;jackson-mapper-asl-1.9.7.jar;jackson-jaxrs-1.9.7.jar;jackson-core-asl-1.9.7.jar;parboiled-core-1.1.6.jar;parboiled-scala_2.10-1.1.6.jar">
       </classloader>
    </extension>
    <extension
