TBD-894: Link JDBC and Hadoop properties to the repository

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -1,4 +1,8 @@
-HELP=org.talend.help.tSqoopImport
+HELP=org.talend.help.tSqoopExport
+
+JDBC_PROPERTY.NAME=JDBC Property
+HADOOP_PROPERTY.NAME=Hadoop Property
+
 LONG_NAME=Imports an individual table from an RDBMS to HDFS
 EXTERNAL.NAME=Sqoop Import
 TEMPFILE.NAME=Temp data directory path
