--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -1,4 +1,8 @@
 HELP=org.talend.help.tSqoopImportAllTables
+
+JDBC_PROPERTY.NAME=JDBC Property
+HADOOP_PROPERTY.NAME=Hadoop Property
+
 LONG_NAME=Imports individual tables from an RDBMS to HDFS
 EXTERNAL.NAME=Sqoop Import All Tables
 TEMPFILE.NAME=Temp data directory path
