--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -1,4 +1,8 @@
 HELP=org.talend.help.tSqoopMerge
+
+JDBC_PROPERTY.NAME=JDBC Property
+HADOOP_PROPERTY.NAME=Hadoop Property
+
 LONG_NAME=It allows you to combine two datasets where entries in one dataset should overwrite entries of an older dataset
 EXTERNAL.NAME=Sqoop Merge
 TEMPFILE.NAME=Temp data directory path
