[TBD-62] Active S3 option for tHiveCreateTable.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -79,6 +79,11 @@ TABLEACTION.ITEM.CREATE_IF_NOT_EXIST=Create table if not exists
 SET_FILE_LOCATION.NAME=Set file location
 FILE_LOCATION.NAME=
 
+S3_LOCATION.NAME=Use S3 endpoint
+S3_BUCKET.NAME=S3 Bucket
+S3_USERNAME.NAME=S3 Username
+S3_PASSWORD.NAME=S3 Password
+
 SET_PARTITIONS.NAME=Set partitions
 STORAGE_FORMAT.NAME=Format
 STORAGE_FORMAT.ITEM.RCFILE=RCFILE
