[TBD-62] Allow to configure standalone connection with apache EMR 2.4.0 for the component tHiveCreateTable, tHiveInput and tHiveLoad.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -48,6 +48,7 @@ HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3 (Deprecated)
 HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0 (Deprecated)
 HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
 HIVE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Hive 0.8.1)
+HIVE_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (Hive 0.11.0)
 
 HIVE_SERVER.NAME=Hive Server
 HIVE_SERVER.ITEM.HIVE=Hive 1
