[TBD-62] Add "use datanode hostname" option for pig.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -100,6 +100,8 @@ PRINCIPAL.NAME=Principal
 KEYTAB_PATH.NAME=Keytab
 AUTHENTICATION.NAME=Authentication
 
+USE_DATANODE_HOSTNAME.NAME=Use datanode hostname
+
 ADVANCED_CONFIGURATION.NAME=Advanced configuration
 DRIVER_JAR.NAME=Register jar
 DRIVER_JAR.ITEM.JAR_NAME=Lib path
