[TBD-62] Add S3 compatibility on tPigLoad and tPigStoreResult.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -5,6 +5,12 @@ HCAT_CONFIGURATION.NAME=HCatalog Configuration
 
 OUTPUT_FILENAME.NAME=Result Folder URI
 
+
+S3_LOCATION.NAME=Use S3 endpoint
+S3_BUCKET.NAME=S3 Bucket name and folder
+S3_USERNAME.NAME=S3 Username
+S3_PASSWORD.NAME=S3 Password
+
 FIELD_SEPARATOR_CHAR.NAME=Field separator 
 
 STORE.NAME=Store function 
