TBD-904 fixed: Add the latest options available in the Hortonworks teradata connector

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -167,14 +167,32 @@ CONFIGURATION.NAME=Configuration
 USE_SPEED_PARALLEL.NAME=Use speed parallel data transfers
 SPECIFIC_PARAMS.NAME=Specific params
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM=Argument
-SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-method=teradata.db.output.method
-SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-stage-database=teradata.db.output.stage.database
+
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-batch-size=teradata.db.output.batch.size
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-fastload-number-max=teradata.db.output.fastload.number.max
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-fastload-socket-host=teradata.db.output.fastload.socket.host
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-fastload-socket-port=teradata.db.output.fastload.socket.port
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-file-format=teradata.db.output.file.format
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-job-type=teradata.db.output.job.type
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-method=teradata.db.output.method
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-num-mappers=teradata.db.output.num.mappers
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-num-partitions-in-staging=teradata.db.output.num.partitions.in.staging
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-num-reducers=teradata.db.output.num.reducers
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-separator=teradata.db.output.separator
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-source-field-names=teradata.db.output.source.field.names
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-source-partition-schema=teradata.db.output.source.partition.schema
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-source-paths=teradata.db.output.source.paths
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-source-table=teradata.db.output.source.table
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-source-table-schema=teradata.db.output.source.table.schema
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-stage-database=teradata.db.output.stage.database
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-stage-table-suffix=teradata.db.output.stage.table.suffix
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-stage-table-name=teradata.db.output.stage.table.name
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-target-field-count=teradata.db.output.target.field.count
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-target-field-names=teradata.db.output.target.field.names
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-target-table=teradata.db.output.target.table
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-teradata-db-hive-configuration-file=teradata.db.output.teradata.db.hive.configuration.file
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-teradata-text-separator=teradata.db.output.teradata.text.separator
+
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM_VALUE=Value
 
 SPEED_PARALLEL.NAME=Connector specific configuration
