TBD-933: Add the die on error in the Sqoop component

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -163,3 +163,5 @@ YARN_APP_MAPREDUCE_AM_RESOURCE_MB.NAME= ApplicationMaster (in Mb)
 HADOOP_USER.NAME=Hadoop user name
 
 CROSS_PLATFORM_SUBMISSION.NAME=Activate the cross platform application submission
+
+DIE_ON_ERROR.NAME=Die on error
