TBD-933: Add the die on error in the Sqoop component
Conflicts:
	main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
	main/plugins/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
	main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
	main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -156,4 +156,7 @@ MAPREDUCE_MAP_MEMORY_MB.NAME= Map (in Mb)
 MAPREDUCE_REDUCE_MEMORY_MB.NAME= Reduce (in Mb)
 YARN_APP_MAPREDUCE_AM_RESOURCE_MB.NAME= ApplicationMaster (in Mb)
 
+
 HADOOP_USER.NAME=Hadoop user name
+
+DIE_ON_ERROR.NAME=Die on error
