--- a/main/plugins/org.talend.libraries.apache.kafka/.project
+++ b/main/plugins/org.talend.libraries.apache.kafka/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.talend.libraries.hadoop.hdp.2.1</name>
+	<name>org.talend.libraries.apache.kafka</name>
 	<comment></comment>
 	<projects>
 	</projects>
