--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <module>i18n/plugins/org.talend.repository.hadoopcluster.nl</module>
     <module>i18n/plugins/org.talend.repository.hcatalog.nl</module>
     <module>i18n/plugins/org.talend.repository.hdfs.nl</module>
+	<module>i18n/plugins/org.talend.repository.nosql.nl</module>
     <module>i18n/plugins/org.talend.repository.oozie.nl</module>
     <module>i18n/plugins/org.talend.repository.pigudf.nl</module>
     <module>main/features/org.talend.rcp.branding.tos.bigdata-feature</module>
@@ -37,6 +38,8 @@
     <module>main/plugins/org.talend.designer.hdfsbrowse</module>
     <module>main/plugins/org.talend.designer.neo4j</module>
     <module>main/plugins/org.talend.designer.pigmap</module>
+    <module>main/plugins/org.talend.libraries.apache.kafka</module>
+    <module>main/plugins/org.talend.libraries.apache.storm</module>
     <module>main/plugins/org.talend.libraries.couchbase</module>
     <module>main/plugins/org.talend.libraries.couchdb</module>
     <module>main/plugins/org.talend.libraries.hadoop</module>
@@ -72,9 +75,11 @@
     <module>main/plugins/org.talend.repository.hbaseprovider</module>
     <module>main/plugins/org.talend.repository.hcatalog</module>
     <module>main/plugins/org.talend.repository.hdfs</module>
+	<module>main/plugins/org.talend.repository.nosql</module>
     <module>main/plugins/org.talend.repository.oozie</module>
     <module>main/plugins/org.talend.repository.pigudf</module>
     <module>test/plugins/org.talend.oozie.scheduler.test</module>
+    <module>test/plugins/org.talend.repository.nosql.test</module>
   </modules>
   <build>
     <plugins>
