--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -17,6 +17,7 @@ DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+DISTRIBUTION.ITEM.MICROSOFT_HD_INSIGHT=Microsoft HD Insight
 
 PIG_VERSION.NAME=Version
 PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0 (Deprecated)
@@ -40,6 +41,7 @@ PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
 PIG_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Pig 0.9.2)
 PIG_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 PIG_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
+PIG_VERSION.ITEM.MICROSOFT_HD_INSIGHT_3_1=Microsoft HD Insight 3.1
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
@@ -167,3 +169,20 @@ YARN_APP_MAPREDUCE_AM_RESOURCE_MB.NAME= ApplicationMaster (in Mb)
 USERNAME.NAME=User name
 
 CROSS_PLATFORM_SUBMISSION.NAME=Activate the cross platform application submission
+
+WEBHCAT_CONF.NAME=WebHCat configuration
+WEBHCAT_HOST.NAME=Hostname
+WEBHCAT_PORT.NAME=Port
+WEBHCAT_USERNAME.NAME=Username
+STATUSDIR.NAME=Job result folder
+
+WASB_CONF.NAME=Windows Azure Storage configuration
+WASB_HOST.NAME=Hostname
+WASB_CONTAINER.NAME=Container
+WASB_PASSWORD.NAME=Password
+WASB_USERNAME.NAME=Username
+REMOTE_FOLDER.NAME=Deployment Blob
+
+HDINSIGHT_CONF.NAME=HD Insight configuration
+HDINSIGHT_USERNAME.NAME=Username
+HDINSIGHT_PASSWORD.NAME=Password
