TBD-899: Add support for HD Insight on hive components and update the Pig component with the new API

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -36,6 +36,7 @@ DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
+DISTRIBUTION.ITEM.MICROSOFT_HD_INSIGHT=Microsoft HD Insight
 
 HIVE_VERSION.NAME=Hive version
 HIVE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0 (Deprecated)
@@ -57,6 +58,7 @@ HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3 (Deprecated)
 HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0 (Deprecated)
 HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
 HIVE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Hive 0.8.1)
+HIVE_VERSION.ITEM.MICROSOFT_HD_INSIGHT_3_1=Microsoft HD Insight 3.1
 
 HIVE_SERVER.NAME=Hive Server
 HIVE_SERVER.ITEM.HIVE=Hive 1
@@ -143,3 +145,20 @@ MAPREDUCE_REDUCE_MEMORY_MB.NAME= Reduce (in Mb)
 YARN_APP_MAPREDUCE_AM_RESOURCE_MB.NAME= ApplicationMaster (in Mb)
 
 CROSS_PLATFORM_SUBMISSION.NAME=Activate the cross platform application submission
+
+WEBHCAT_CONF.NAME=WebHCat configuration
+WEBHCAT_HOST.NAME=Hostname
+WEBHCAT_PORT.NAME=Port
+WEBHCAT_USERNAME.NAME=Username
+STATUSDIR.NAME=Job result folder
+
+WASB_CONF.NAME=Windows Azure Storage configuration
+WASB_HOST.NAME=Hostname
+WASB_CONTAINER.NAME=Container
+WASB_PASSWORD.NAME=Password
+WASB_USERNAME.NAME=Username
+REMOTE_FOLDER.NAME=Deployment Blob
+
+HDINSIGHT_CONF.NAME=HD Insight configuration
+HDINSIGHT_USERNAME.NAME=Username
+HDINSIGHT_PASSWORD.NAME=Password
