[TBD-62] Change dependency to allow embedded mode on tHiveInput Add datanode hostname option on tHiveInput Fix properties on tPigLoad

--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -48,10 +48,10 @@ THRIFT_SERVER.NAME=HCat Metastore
 
 INPUT_FILENAME.NAME=Input file URI
 
-S3_LOCATION.NAME=Use S3 endpoint
-S3_BUCKET.NAME=S3 Bucket name and folder
-S3_USERNAME.NAME=S3 Username
-S3_PASSWORD.NAME=S3 Password
+S3_LOCATION_LOAD.NAME=Use S3 endpoint
+S3_BUCKET_LOAD.NAME=S3 Bucket name and folder
+S3_USERNAME_LOAD.NAME=S3 Username
+S3_PASSWORD_LOAD.NAME=S3 Password
 
 DATABASE_NAME.NAME=Database
 TABLE_NAME.NAME=Table
