--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -114,6 +114,8 @@ SET_JOBHISTORY_ADDRESS.NAME=Set jobhistory address
 JOBHISTORY_ADDRESS.NAME=
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 
+USE_DATANODE_HOSTNAME.NAME=Use datanode hostname
+
 USE_KRB.NAME=Use kerberos authentication
 HIVE_PRINCIPAL.NAME=Hive principal
 NAMENODE_PRINCIPAL.NAME=Namenode principal
