[TBD-62] Allow EMR2.4.0 connection on tELTHiveMap. Fix jar dependencies on all Hive components.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -36,6 +36,7 @@ HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3 (Deprecated)
 HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0 (Deprecated)
 HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
 HIVE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Hive 0.8.1)
+HIVE_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (Hive 0.11.0)
 
 HIVE_SERVER.NAME=Hive Server
 HIVE_SERVER.ITEM.HIVE=Hive 1
@@ -133,5 +134,8 @@ SET_MEMORY.NAME=Set memory
 MAPREDUCE_MAP_MEMORY_MB.NAME= Map (in Mb)
 MAPREDUCE_REDUCE_MEMORY_MB.NAME= Reduce (in Mb)
 YARN_APP_MAPREDUCE_AM_RESOURCE_MB.NAME= ApplicationMaster (in Mb)
+
+
+USE_DATANODE_HOSTNAME.NAME=Use datanode hostname
 
 CROSS_PLATFORM_SUBMISSION.NAME=Activate the cross platform application submission
