--- a/main/plugins/org.talend.repository.nosql/plugin.xml
+++ b/main/plugins/org.talend.repository.nosql/plugin.xml
@@ -227,4 +227,16 @@
             type="nosql"
             class="org.talend.repository.model.nosql.util.NosqlResourceFactoryImpl"/>
    </extension>
+   <extension
+         point="org.talend.core.migrationTask">
+      <projecttask
+            beforeLogon="false"
+            breaks="5.5.1"
+            class="org.talend.repository.nosql.repository.migration.UnifyPasswordEncryption4NoSQLConnectionMigrationTask"
+            description="Unify the entryption for NoSQL password field"
+            id="org.talend.repository.nosql.repository.migration.UnifyPasswordEncryption4NoSQLConnectionMigrationTask"
+            name="UnifyPasswordEncryption4NoSQLConnectionMigrationTask"
+            version="5.5.1">
+      </projecttask>
+   </extension>
 </plugin>
