--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -68,7 +68,7 @@
       </classloader>
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5"
-            libraries="hadoop-hdfs-2.3.0-cdh5.0.0.jar;hadoop-common-2.3.0-cdh5.0.0.jar;hadoop-auth-2.3.0-cdh5.0.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.7.5-cdh5.0.0.jar;log4j-1.2.17.jar;commons-io-2.4.jar">
+            libraries="hadoop-hdfs-2.3.0-cdh5.0.4.jar;hadoop-common-2.3.0-cdh5.0.4.jar;hadoop-auth-2.3.0-cdh5.0.4.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.7.5-cdh5.0.4.jar;log4j-1.2.17.jar;commons-io-2.4.jar">
       </classloader>
       <classloader
             index="HDFS:MAPR:MAPR1"
@@ -96,7 +96,7 @@
       </classloader>
       <classloader
             index="HDFS:HORTONWORKS:HDP_2_1?USE_KRB"
-            libraries="hadoop-auth-2.4.0.2.1.1.0-385.jar;hadoop-common-2.4.0.2.1.1.0-385.jar;hadoop-hdfs-2.4.0.2.1.1.0-385.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.5.4.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar;">
+            libraries="hadoop-auth-2.4.0.2.1.1.0-385.jar;hadoop-common-2.4.0.2.1.1.0-385.jar;hadoop-hdfs-2.4.0.2.1.1.0-385.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.5.4.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar">
       </classloader>
       <classloader
             index="HDFS:APACHE:APACHE_1_0_0?USE_KRB"
@@ -108,7 +108,7 @@
       </classloader>
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5?USE_KRB"
-            libraries="hadoop-hdfs-2.3.0-cdh5.0.0.jar;hadoop-common-2.3.0-cdh5.0.0.jar;hadoop-auth-2.3.0-cdh5.0.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.7.5-cdh5.0.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar">
+            libraries="hadoop-hdfs-2.3.0-cdh5.0.4.jar;hadoop-common-2.3.0-cdh5.0.4.jar;hadoop-auth-2.3.0-cdh5.0.4.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.7.5-cdh5.0.4.jar;log4j-1.2.17.jar;commons-io-2.4.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar">
       </classloader>
       <classloader
             index="HDFS:AMAZON_EMR:MapR_EMR"
@@ -222,7 +222,7 @@
       </classloader>
       <classloader
             index="MAP_REDUCE:CLOUDERA:Cloudera_CDH5"
-            libraries="hadoop-hdfs-2.3.0-cdh5.0.0.jar;hadoop-common-2.3.0-cdh5.0.0.jar;hadoop-auth-2.3.0-cdh5.0.0.jar;hadoop-mapreduce-client-common-2.3.0-cdh5.0.0.jar;hadoop-mapreduce-client-core-2.3.0-cdh5.0.0.jar;hadoop-mapreduce-client-jobclient-2.3.0-cdh5.0.0.jar;hadoop-yarn-api-2.3.0-cdh5.0.0.jar;hadoop-yarn-client-2.3.0-cdh5.0.0.jar;hadoop-yarn-common-2.3.0-cdh5.0.0.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;avro-1.5.4.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar">
+            libraries="hadoop-hdfs-2.3.0-cdh5.0.4.jar;hadoop-common-2.3.0-cdh5.0.4.jar;hadoop-auth-2.3.0-cdh5.0.4.jar;hadoop-mapreduce-client-common-2.3.0-cdh5.0.4.jar;hadoop-mapreduce-client-core-2.3.0-cdh5.0.4.jar;hadoop-mapreduce-client-jobclient-2.3.0-cdh5.0.4.jar;hadoop-yarn-api-2.3.0-cdh5.0.4.jar;hadoop-yarn-client-2.3.0-cdh5.0.4.jar;hadoop-yarn-common-2.3.0-cdh5.0.4.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;avro-1.5.4.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar">
       </classloader>
       <classloader
             index="MAP_REDUCE:MAPR:MAPR1"
