--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -35,6 +35,7 @@ HBASE_VERSION.ITEM.HDP_2_1=Hortonworks Data Platform V2.1.0(Baikal)
 HBASE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (HBase 0.90.1)
 HBASE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (HBase 0.92.0)
 HBASE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (HBase 0.92.0)
+HBASE_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (HBase 0.94.18)
 HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 HBASE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 HBASE_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
