--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -71,6 +71,10 @@
             libraries="hadoop-hdfs-2.3.0-cdh5.0.4.jar;hadoop-common-2.3.0-cdh5.0.4.jar;hadoop-auth-2.3.0-cdh5.0.4.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.7.5-cdh5.0.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar;commons-io-2.4.jar">
       </classloader>
       <classloader
+            index="HDFS:CLOUDERA:Cloudera_CDH5_1"
+            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;commons-configuration-1.6.jar">
+      </classloader>
+      <classloader
             index="HDFS:MAPR:MAPR1"
             libraries="hadoop-0.20.2-dev-core.jar;commons-logging-1.0.4.jar;maprfs-0.1.jar;zookeeper-3.3.2.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
@@ -108,7 +112,11 @@
       </classloader>
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5?USE_KRB"
-            libraries="hadoop-hdfs-2.3.0-cdh5.0.4.jar;hadoop-common-2.3.0-cdh5.0.4.jar;hadoop-auth-2.3.0-cdh5.0.4.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.7.5-cdh5.0.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar;commons-io-2.4.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar">
+            libraries="hadoop-hdfs-2.3.0-cdh5.0.0.jar;hadoop-common-2.3.0-cdh5.0.0.jar;hadoop-auth-2.3.0-cdh5.0.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.7.5-cdh5.0.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar">
+      </classloader>
+      <classloader
+            index="HDFS:CLOUDERA:Cloudera_CDH5_1?USE_KRB"
+            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar">
       </classloader>
       <classloader
             index="HDFS:AMAZON_EMR:MapR_EMR"
@@ -275,6 +283,10 @@
       <classloader
             index="MAP_REDUCE:AMAZON_EMR:APACHE_2_4_0_EMR"
             libraries="hadoop-annotations-2.4.0.jar;hadoop-yarn-api-2.4.0.jar;hadoop-yarn-client-2.4.0.jar;hadoop-yarn-common-2.4.0.jar;hadoop-auth-2.4.0.jar;hadoop-common-2.4.0.jar;hadoop-hdfs-2.4.0.jar;hadoop-mapreduce-client-common-2.4.0.jar;hadoop-mapreduce-client-core-2.4.0.jar;hadoop-mapreduce-client-jobclient-2.4.0.jar;commons-logging-1.1.3.jar;protobuf-java-2.5.0.jar;commons-httpclient-3.1.jar;jets3t-0.9.1-emr-2.4.0.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;commons-lang-2.6.jar;gson-2.1.jar;EmrMetrics-1.0.jar;">
+      </classloader>
+      <classloader
+            index="MAP_REDUCE:CLOUDERA:Cloudera_CDH5_1"
+            libraries="hadoop-hdfs-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-mapreduce-client-common-2.3.0-cdh5.1.2.jar;hadoop-mapreduce-client-core-2.3.0-cdh5.1.2.jar;hadoop-mapreduce-client-jobclient-2.3.0-cdh5.1.2.jar;hadoop-yarn-api-2.3.0-cdh5.1.2.jar;hadoop-yarn-client-2.3.0-cdh5.1.2.jar;hadoop-yarn-common-2.3.0-cdh5.1.2.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;avro-1.5.4.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar">
       </classloader>
    </extension>
 
