[TBD-990] Fix missing description.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -81,7 +81,7 @@ TABLEACTION.ITEM.CREATE_TABLE=Create table
 TABLEACTION.ITEM.CREATE_IF_NOT_EXIST=Create table if not exists
 
 SET_FILE_LOCATION.NAME=Set file location
-FILE_LOCATION.NAME=
+FILE_LOCATION.NAME=URI path
 S3_LOCATION.NAME=Use S3 endpoint
 S3_BUCKET.NAME=S3 Bucket
 S3_USERNAME.NAME=S3 Username
