--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -123,6 +123,14 @@
             libraries="hadoop-core-1.0.3.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;hadoop-conf-kerberos.jar">
       </classloader>
       <classloader
+            index="HDFS:AMAZON_EMR:APACHE_2_4_0_EMR"
+            libraries="hadoop-annotations-2.4.0.jar;hadoop-yarn-api-2.4.0.jar;hadoop-yarn-client-2.4.0.jar;hadoop-yarn-common-2.4.0.jar;hadoop-auth-2.4.0.jar;hadoop-common-2.4.0.jar;hadoop-hdfs-2.4.0.jar;hadoop-mapreduce-client-common-2.4.0.jar;hadoop-mapreduce-client-core-2.4.0.jar;hadoop-mapreduce-client-jobclient-2.4.0.jar;commons-logging-1.1.3.jar;protobuf-java-2.5.0.jar;commons-httpclient-3.1.jar;jets3t-0.9.1-emr-2.4.0.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;commons-lang-2.6.jar;gson-2.1.jar;EmrMetrics-1.0.jar;guava-11.0.2.jar;commons-collections-3.2.1.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
+      </classloader>
+      <classloader
+            index="HDFS:AMAZON_EMR:APACHE_2_4_0_EMR?USE_KRB"
+            libraries="hadoop-annotations-2.4.0.jar;hadoop-yarn-api-2.4.0.jar;hadoop-yarn-client-2.4.0.jar;hadoop-yarn-common-2.4.0.jar;hadoop-auth-2.4.0.jar;hadoop-common-2.4.0.jar;hadoop-hdfs-2.4.0.jar;hadoop-mapreduce-client-common-2.4.0.jar;hadoop-mapreduce-client-core-2.4.0.jar;hadoop-mapreduce-client-jobclient-2.4.0.jar;commons-logging-1.1.3.jar;protobuf-java-2.5.0.jar;commons-httpclient-3.1.jar;jets3t-0.9.1-emr-2.4.0.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;commons-lang-2.6.jar;gson-2.1.jar;EmrMetrics-1.0.jar;guava-11.0.2.jar;commons-collections-3.2.1.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;hadoop-conf-kerberos.jar">
+      </classloader>
+      <classloader
             index="HDFS:PIVOTAL_HD:PIVOTAL_HD_1_0_1"
             libraries="hadoop-hdfs-2.0.2-alpha-gphd-2.0.1.0.jar;hadoop-common-2.0.2-alpha-gphd-2.0.1.0.jar;hadoop-auth-2.0.2-alpha-gphd-2.0.1.0.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;guava-11.0.2.jar;log4j-1.2.17.jar;protobuf-java-2.4.0a.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;avro-1.5.4.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar">
       </classloader>
