[TBD-62] Add EMR 2.4.0 connection on DI tHDFS component.
Full list :
tHDFSCompare
tHDFSCopy
tHDFSDelete
tHDFSExist
tHDFSGet
tHDFSList
tHDFSProperties
tHDFSPut
tHDFSRename
tHDFSRowCount

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
@@ -40,6 +40,9 @@ DB_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
 DB_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
 DB_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
 DB_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3
+DB_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0
+
+USE_DATANODE_HOSTNAME.NAME=Use Datanode Hostname
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 USERNAME.NAME=User name
