--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
@@ -39,6 +39,9 @@ DB_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
 DB_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
+DB_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0
+
+USE_DATANODE_HOSTNAME.NAME=Use Datanode Hostname
 
 AUTHENTICATION_MODE.NAME=Authentication
 AUTHENTICATION_MODE.ITEM.USERNAME=Username
