--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -133,6 +133,7 @@ DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
+DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 
@@ -155,6 +156,9 @@ DB_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
 DB_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
+DB_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0
+
+USE_DATANODE_HOSTNAME.NAME=Use Datanode Hostname
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
