--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -88,6 +88,7 @@ VERSION.NAME=Version
 DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
+DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 
@@ -109,6 +110,9 @@ DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 DB_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 DB_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
 DB_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
+DB_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0
+
+USE_DATANODE_HOSTNAME.NAME=Use Datanode Hostname
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
