[TBD-62] Add "set hadoop user" option on hive components. tHiveCreateTable: Automagically set the create table as external     with a s3 connection.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -107,6 +107,8 @@ SET_RESOURCE_MANAGER.NAME=Set Resource Manager
 RESOURCE_MANAGER.NAME=
 SET_JOBHISTORY_ADDRESS.NAME=Set jobhistory address
 JOBHISTORY_ADDRESS.NAME=
+SET_HADOOP_USER.NAME=Set Hadoop User
+HADOOP_USER.NAME=
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 
 USE_KRB.NAME=Use kerberos authentication
