--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -82,7 +82,7 @@ TABLEACTION.ITEM.CREATE_IF_NOT_EXIST=Create table if not exists
 
 SET_FILE_LOCATION.NAME=Set file location
 FILE_LOCATION.NAME=URI path
-S3_LOCATION.NAME=Use S3 endpoint
+S3_LOCATION.NAME=Use S3 endpoint (External table)
 S3_BUCKET.NAME=S3 Bucket
 S3_USERNAME.NAME=S3 Username
 S3_PASSWORD.NAME=S3 Password
@@ -154,6 +154,8 @@ SET_RESOURCE_MANAGER.NAME=Set Resource Manager
 RESOURCE_MANAGER.NAME=
 SET_JOBHISTORY_ADDRESS.NAME=Set jobhistory address
 JOBHISTORY_ADDRESS.NAME=
+SET_HADOOP_USER.NAME=Set Hadoop User
+HADOOP_USER.NAME=
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 USE_DATANODE_HOSTNAME.NAME=Use datanode hostname
 
