--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/pom.xml
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/pom.xml
@@ -10,4 +10,39 @@
   </parent>
   <artifactId>org.talend.rcp.branding.tos.bigdata</artifactId>
   <packaging>eclipse-plugin</packaging>
+    <build>
+	<resources>
+		<resource>
+            <directory>.</directory>
+            <includes>
+				<include>about.mappings</include>
+            </includes>
+            <filtering>true</filtering>
+        </resource>
+    </resources>
+	<plugins>
+		<plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.9.1</version>
+        <executions>
+          <execution>
+            <id>attach-license-artifact</id>
+            <phase>package</phase>
+            <goals>
+              <goal>attach-artifact</goal>
+            </goals>
+            <configuration>
+              <artifacts>
+                <artifact>
+                  <file>./resources/license.txt</file>
+                  <type>license</type>
+                </artifact>
+              </artifacts>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+	</plugins>
+  </build>
 </project>
