TBD-891: Add the Twitter streaming feature for the tSparkLoad and fix some issues

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSparkConnection/tSparkConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSparkConnection/tSparkConnection_messages.properties
@@ -35,3 +35,5 @@ STREAMING_DURATION.NAME=
 SPARK_ADVANCED_PROPERTIES.NAME=Advanced properties
 SPARK_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 SPARK_ADVANCED_PROPERTIES.ITEM.VALUE=Value
+
+LIBRARY.NAME=Hadoop configuration
