--- a/main/plugins/org.talend.designer.components.bigdata/components/tSparkLoad/tSparkLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSparkLoad/tSparkLoad_messages.properties
@@ -21,3 +21,23 @@ STORAGE_SOURCE.NAME=Storage source
 STORAGE_SOURCE.ITEM.LOCAL=Local
 STORAGE_SOURCE.ITEM.HDFS=HDFS
 STORAGE_SOURCE.ITEM.CUSTOM=Custom (Not supported)
+STORAGE_SOURCE.ITEM.TWITTER=Twitter feed
+
+
+TWITTER_CONFIGURATION.NAME=Twitter configuration
+CONSUMERKEY.NAME=Consumer key
+CONSUMERSECRET.NAME=Consumer secret
+ACCESSTOKEN.NAME=Access token
+SECRETTOKEN.NAME=Secret token
+FILTER.NAME=Filters
+
+MAPPING.NAME=Data mapping
+MAPPING.ITEM.TWITTER_PROPERTY=Property
+MAPPING.ITEM.TWITTER_PROPERTY.ITEM.USERNAME=Username
+MAPPING.ITEM.TWITTER_PROPERTY.ITEM.TEXT=Text
+MAPPING.ITEM.TWITTER_PROPERTY.ITEM.SOURCE=Source
+MAPPING.ITEM.TWITTER_PROPERTY.ITEM.ACCESSLEVEL=Access level
+MAPPING.ITEM.TWITTER_PROPERTY.ITEM.DATE=Creation date
+MAPPING.ITEM.TWITTER_PROPERTY.ITEM.GEOLOCATION_LATITUDE=Geolocation latitude
+MAPPING.ITEM.TWITTER_PROPERTY.ITEM.GEOLOCATION_LONGITUDE=Geolocation longitude
+MAPPING.ITEM.TWITTER_PROPERTY.ITEM.HASHTAG=Hashtags
