--- a/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -34,6 +34,7 @@ HIVE_VERSION.ITEM.MAPR212=MapR 2.1.2
 HIVE_VERSION.ITEM.MAPR213=MapR 2.1.3
 HIVE_VERSION.ITEM.MAPR301=MapR 3.0.1
 HIVE_VERSION.ITEM.MAPR310=MapR 3.1.0
+HIVE_VERSION.ITEM.MAPR401=MapR 4.0.1(YARN mode)
 HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3 (Deprecated)
 HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0 (Deprecated)
 HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
