--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -116,7 +116,8 @@ DB_VERSION.ITEM.MAPR2=MapR 2.0.0 (Sqoop 1.4)
 DB_VERSION.ITEM.MAPR212=MapR 2.1.2 (Sqoop 1.4.2)
 DB_VERSION.ITEM.MAPR213=MapR 2.1.3 (Sqoop 1.4.2)
 DB_VERSION.ITEM.MAPR301=MapR 3.0.1 (Sqoop 1.4.2)
-DB_VERSION.ITEM.MAPR310=MapR 3.1.0 (Sqoop 1.4.2)
+DB_VERSION.ITEM.MAPR310=MapR 3.1.0
+DB_VERSION.ITEM.MAPR401=MapR 4.0.1(YARN mode)
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0 (Deprecated)
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
