--- a/main/plugins/org.talend.designer.components.bigdata/components/tSparkLoad/tSparkLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSparkLoad/tSparkLoad_messages.properties
@@ -35,6 +35,7 @@ MAPPING.NAME=Data mapping
 MAPPING.ITEM.TWITTER_PROPERTY=Property
 MAPPING.ITEM.TWITTER_PROPERTY.ITEM.USERNAME=Username
 MAPPING.ITEM.TWITTER_PROPERTY.ITEM.TEXT=Text
+MAPPING.ITEM.TWITTER_PROPERTY.ITEM.ID=Id
 MAPPING.ITEM.TWITTER_PROPERTY.ITEM.SOURCE=Source
 MAPPING.ITEM.TWITTER_PROPERTY.ITEM.ACCESSLEVEL=Access level
 MAPPING.ITEM.TWITTER_PROPERTY.ITEM.DATE=Creation date
