TBD-891: Support for additional operations in the tSparkFilterRow

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSparkFilterRow/tSparkFilterRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSparkFilterRow/tSparkFilterRow_messages.properties
@@ -10,12 +10,16 @@ FILTER_CONFIG.ITEM.LOGICAL.ITEM.OR=OR
 
 FILTER_CONFIG.ITEM.OPERATOR=Operator
 
-FILTER_CONFIG.ITEM.OPERATOR.ITEM.EQUAL=equal
-FILTER_CONFIG.ITEM.OPERATOR.ITEM.NEQUAL=not equal
-FILTER_CONFIG.ITEM.OPERATOR.ITEM.GREATER=greater than
-FILTER_CONFIG.ITEM.OPERATOR.ITEM.GREATER_EQUAL=greater than or equal to
-FILTER_CONFIG.ITEM.OPERATOR.ITEM.LESS=less than
-FILTER_CONFIG.ITEM.OPERATOR.ITEM.LESS_EQUAL=less than or equal to
+FILTER_CONFIG.ITEM.OPERATOR.ITEM.EQUAL=Equals
+FILTER_CONFIG.ITEM.OPERATOR.ITEM.NEQUAL=Not equal
+FILTER_CONFIG.ITEM.OPERATOR.ITEM.GREATER=Greater than
+FILTER_CONFIG.ITEM.OPERATOR.ITEM.GREATER_EQUAL=Greater than or equal to
+FILTER_CONFIG.ITEM.OPERATOR.ITEM.LESS=Less than
+FILTER_CONFIG.ITEM.OPERATOR.ITEM.LESS_EQUAL=Less than or equal to
+FILTER_CONFIG.ITEM.OPERATOR.ITEM.STARTS_WITH=Starts with
+FILTER_CONFIG.ITEM.OPERATOR.ITEM.ENDS_WITH=Ends with
+FILTER_CONFIG.ITEM.OPERATOR.ITEM.CONTAINS=Contains
+FILTER_CONFIG.ITEM.OPERATOR.ITEM.MATCHES=Matches
 
 FILTER_CONFIG.ITEM.VALUE=Value
 
