TBD-928: Add support for kerberos in the impala components

--- a/main/plugins/org.talend.designer.components.bigdata/components/tImpalaConnection/tImpalaConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tImpalaConnection/tImpalaConnection_messages.properties
@@ -15,3 +15,7 @@ HOST.NAME=Host
 PORT.NAME=Port
 DBNAME.NAME=Database
 USER.NAME=Username
+
+USE_KRB.NAME=Use Kerberos authentication
+IMPALA_PRINCIPAL.NAME=Impala principal
+AUTHENTICATION.NAME=Authentication
