--- a/main/plugins/org.talend.designer.components.bigdata/components/tImpalaCreateTable/tImpalaCreateTable_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tImpalaCreateTable/tImpalaCreateTable_messages.properties
@@ -17,6 +17,10 @@ PORT.NAME=Port
 DBNAME.NAME=Database
 USER.NAME=Username
 
+USE_KRB.NAME=Use Kerberos authentication
+IMPALA_PRINCIPAL.NAME=Impala principal
+AUTHENTICATION.NAME=Authentication
+
 TABLEACTION.NAME=Action on table
 
 TABLEACTION.ITEM.CREATE_TABLE=Create table
