--- a/main/plugins/org.talend.designer.components.bigdata/components/tImpalaInput/tImpalaInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tImpalaInput/tImpalaInput_messages.properties
@@ -17,6 +17,10 @@ PORT.NAME=Port
 DBNAME.NAME=Database
 USER.NAME=Username
 
+USE_KRB.NAME=Use Kerberos authentication
+IMPALA_PRINCIPAL.NAME=Impala principal
+AUTHENTICATION.NAME=Authentication
+
 SCHEMA.NAME=Schema
 TABLE.NAME=Table Name
 QUERYSTORE.NAME=Query Type
