--- a/main/plugins/org.talend.designer.components.bigdata/components/tImpalaLoad/tImpalaLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tImpalaLoad/tImpalaLoad_messages.properties
@@ -25,6 +25,10 @@ SCHEMA.NAME=Schema
 TABLE.NAME=Table Name
 DBTABLE.NAME=Table Name
 
+USE_KRB.NAME=Use Kerberos authentication
+IMPALA_PRINCIPAL.NAME=Impala principal
+AUTHENTICATION.NAME=Authentication
+
 QUERY.NAME=Query
 
 
