--- a/main/plugins/org.talend.designer.components.bigdata/components/tImpalaOutput/tImpalaOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tImpalaOutput/tImpalaOutput_messages.properties
@@ -23,6 +23,10 @@ USER.NAME=Username
 PASS.NAME=Password
 TABLE.NAME=Table Name
 
+USE_KRB.NAME=Use Kerberos authentication
+IMPALA_PRINCIPAL.NAME=Impala principal
+AUTHENTICATION.NAME=Authentication
+
 DIE_ON_ERROR.NAME=Die on error
 
 ACTION.NAME=Action
