--- a/main/plugins/org.talend.designer.components.bigdata/components/tImpalaRow/tImpalaRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tImpalaRow/tImpalaRow_messages.properties
@@ -24,6 +24,10 @@ PASS.NAME=Password
 SCHEMA.NAME=Schema
 TABLE.NAME=Table Name
 
+USE_KRB.NAME=Use Kerberos authentication
+IMPALA_PRINCIPAL.NAME=Impala principal
+AUTHENTICATION.NAME=Authentication
+
 REJECT.LINK=Rejects
 REJECT.MENU=Rejects
 
