TBD-1040 fixed: Make the password-file option work for Sqoop components

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -74,6 +74,10 @@ ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
 ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
 ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--warehouse-dir=--warehouse-dir
 
+ADDITIONAL_JAVA.NAME=Additional Arguments
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT=Argument
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_VALUE=Value
+
 OUTPUT_MESSAGE.NAME=Output Message
 
 ADDITIONAL_COMMANDLINE_ARGUMENTS.NAME=
